# auth-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  worker.py  wrangler.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_github_repository_sync.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
app/db/: database.py
app/middleware/: exceptions.py  logging.py  worker_bindings.py
app/models/: __init__.py  github_connection.py  refresh_token.py  repository.py  repository_sync_job.py  user.py
app/repositories/: github_connection_repository.py  repository_repository.py  repository_sync_job_repository.py  token_repository.py  user_repository.py
app/schemas/: auth.py  github.py  schemas.py
app/services/: auth_service.py  auth_state_service.py  email_service.py  github_integration_service.py  google_oauth_service.py  tenant_service.py  token_service.py  user_service.py
app/utils/: email.py  pagination.py
migrations/: 001_initial_schema.sql  002_auth_runtime_state.sql  003_workspace_membership_rules.sql  004_add_plan_metadata.sql
openapi/: OpenApiSchema.yml
scripts/: deploy_cloudflare.sh  generate_keys.sh  init_db.sql  migrate.py  migrate_d1.sh
tests/: conftest.py
tests/integration/: test_auth_endpoints.py  test_github_integration_endpoints.py
tests/unit/: test_auth_service.py  test_database_config.py  (+4 more)
(+10 files in other folders)
